--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ h1, h2 {
 .textab {
 	width: 100%;
 	overflow-x: hidden;
+	overflow-y: hidden;
+	
 }
 .Internet {
 	color: #CF0025;
@@ -28,8 +30,9 @@ h1, h2 {
 }
 
 figure {
+	position: relative;
 	background-color: #333333;
-	width: 91.7%;
+	max-width: 100%;
 	margin-left: 0px;
 	margin-right: 0px;
 	padding: 40px;
@@ -80,11 +83,13 @@ td>a {
 	color: black;
 	font-weight: lighter ;
 }
-td>a:hover {
- background-color: #989898;
+tr:hover {
+	background-color: #989898;
 }
+
 .block1 {
 	background-color: #B7B7B7;
+	max-width: 100%;
 	font-size: 18px;
 	margin-left: 30px;
 	margin-right: 20px;
